k8s/prometheus/grafana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "htaccess"
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 80
